tests/compile-fail/bitflags_trait_custom.rs
use bitflags::BitFlags;

pub struct BootlegFlags(u32);

impl BitFlags for BootlegFlags {
    type Bits = u32;
}

fn main() {}
