tests/compile-fail/bitflags_trait_custom.stderr
error[E0437]: type `Bits` is not a member of trait `BitFlags`
 --> tests/compile-fail/bitflags_trait_custom.rs:6:5
  |
6 |     type Bits = u32;
  |     ^^^^^^^^^^^^^^^^ not a member of trait `BitFlags`

warning: use of deprecated trait `bitflags::BitFlags`: use the `Flags` trait instead
 --> tests/compile-fail/bitflags_trait_custom.rs:1:15
  |
1 | use bitflags::BitFlags;
  |               ^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated trait `bitflags::BitFlags`: use the `Flags` trait instead
 --> tests/compile-fail/bitflags_trait_custom.rs:5:6
  |
5 | impl BitFlags for BootlegFlags {
  |      ^^^^^^^^

error[E0277]: the trait bound `BootlegFlags: Flags` is not satisfied
 --> tests/compile-fail/bitflags_trait_custom.rs:5:19
  |
5 | impl BitFlags for BootlegFlags {
  |                   ^^^^^^^^^^^^ the trait `Flags` is not implemented for `BootlegFlags`
  |
note: required by a bound in `BitFlags`
 --> src/traits.rs
  |
  | pub trait BitFlags: ImplementedByBitFlagsMacro + Flags {
  |                                                  ^^^^^ required by this bound in `BitFlags`

error[E0046]: not all trait items implemented, missing: `Iter`, `IterNames`
 --> tests/compile-fail/bitflags_trait_custom.rs:5:1
  |
5 | impl BitFlags for BootlegFlags {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Iter`, `IterNames` in implementation
  |
  = help: implement the missing item: `type Iter = /* Type */;`
  = help: implement the missing item: `type IterNames = /* Type */;`
